@@ -11,6 +11,7 @@ const roll = require('./roll.js');
 const minecraft = require('./minecraft.js');
 const blackjack = require('./blackjack.js');
 const events = require('./events.js');
+const mute = require('./mute.js');
 const default_ = require('./default.js');
 
 const commandArray = [
@@ -27,6 +28,7 @@ const commandArray = [
 	minecraft,
 	blackjack,
 	events,
+	mute,
 	default_
 ];
 
