@@ -1,3 +1,5 @@
+2020/07/20
+• Bot now knows two meta-commands: quietly and loudly.
 2020/05/04
 • Bot will notify if it's having trouble reaching the Minecraft server.
 2020/04/26
